syntax = "proto3";
package wildkvpb;

import "kvrpcpb.proto";

service Wildkv {
    rpc RawGet(kvrpcpb.RawGetRequest) returns (kvrpcpb.RawGetResponse);
    // rpc RawPut(kvrpcpb.RawPutRequest) returns (kvrpcpb.RawPutResponse);
    // rpc RawDelete(kvrpcpb.RawDeleteRequest) returns (kvrpcpb.RawDeleteResponse);
    // rpc RawScan(kvrpcpb.RawScanRequest) returns (kvrpcpb.RawScanResponse);
}
